# codecompass

./: .gitignore  ENTRY.md  LICENSE  README.md  e2e_test.py  onboarding.md  pyproject.toml  setup.ps1  setup.sh
.github/: copilot-instructions.md
e2e/: e2e_test.py
src/codecompass/: __init__.py  __main__.py  cli.py  models.py
src/codecompass/agent/: __init__.py  agent.py  client.py  prompts.py  tools.py
src/codecompass/github/: __init__.py  client.py  git.py
src/codecompass/indexer/: __init__.py  knowledge_graph.py  scanner.py
src/codecompass/ui/: __init__.py  app.py  widgets.py
src/codecompass/utils/: __init__.py  config.py  formatting.py
tests/: test_cli.py  test_client.py  test_git.py  test_indexer.py  test_models.py  test_tools.py
